# tetrio-tools

./: Cargo.toml  LICENSE-MIT  README.md  save
bsr-player/: Cargo.toml
bsr-player/src/: board.rs  main.rs
bsr-player/src/draw/: board.rs  grid.rs  mod.rs
bsr-replay/: Cargo.toml
bsr-replay/src/: main.rs
bsr-replay/src/draw/: grid.rs  mod.rs
bsr-tools/: Cargo.toml
bsr-tools/src/: action.rs  board.rs  kick_table.rs  lib.rs  rng.rs  tetromino.rs
samples/: _40l.ttr  _40l_faulty.ttr  blitz.ttr  garbage.ttr  hahahaki.ttr  large_board.ttr  zbrachi_standard.ttr
tagged-hybrid/: Cargo.toml
tagged-hybrid/src/: lib.rs
tetrio-replay/: Cargo.toml
tetrio-replay/src/: HBSQabUhSS.ttrm  board.rs  data.rs  lib.rs  mechanics.rs  reconstruct.rs  rng.rs
tetrio-replay/src/board/: kick_table.rs  settings.rs  storage.rs
tetrio-replay/src/mechanics/: kick_table.rs
tetrio-replay/tests/: ttr.rs  ttrm.rs
ttrm/: Cargo.toml
ttrm/src/: data.rs  event.rs  game_type.rs  lib.rs  ttr.rs  ttrm.rs
ttrm/tests/: read_ttr.rs  read_ttrm.rs
viewtris/: Cargo.toml
viewtris-player/: Cargo.toml
viewtris-player/src/: file.rs  main.rs  selection.rs  state.rs
viewtris-player/src/draw/: board.rs  grid.rs  mod.rs
viewtris/src/: action.rs  kick_table.rs  lib.rs  positions.rs  tetromino.rs
viewtris/src/tables/: damage_table.rs  mod.rs  rotation_table.rs
