[package]
name = "bsr-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# glutin = "0.29"
glium = "0.32"
itertools = "0.10"
tap = "1.0"

gridly_grids = "0.5"
gridly = "0.9"

bsr-tools = { path = "../bsr-tools" }
