[package]
name = "tagged-hybrid"
version = "0.1.0"
edition = "2021"
description = "An attribute for serde crates which helps it read enums tagged the tetrio way"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.10"
tap = "1.0"
heck = "0.4"
smallvec = "1.9"