[package]
name = "tetrio-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tagged-hybrid = { path = "../tagged-hybrid" }
anyhow = "1.0"
# grid = "0.8"

gridly = "0.9"
gridly_grids = "0.5"

once_cell = "1.13"
itertools = "0.10"
tap = "1.0"
phf = { version = "0.11", features = ["macros"] }
