[package]
name = "tetrio-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viewtris = { path = "../viewtris"}

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ttrm = { path = "../ttrm" }
anyhow = "1.0"

itertools = "0.10"
tap = "1.0"
tinyvec = "1.6"

gridly = "0.9"